src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <formula>TEXT(CreatedBy.Area__c)</formula>
        <label>Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment_Link__c</fullName>
        <label>Attachment Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Blended_Cost__c</fullName>
        <description>$300/hr multiplied by FE Hours</description>
        <formula>FE_Activity_Hours__c *300</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Blended Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calendar__c</fullName>
        <formula>Owner:Calendar.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calendar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Check_Amount__c</fullName>
        <label>Credit Check Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Check_Notes__c</fullName>
        <label>Credit Check Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Product_Version__c</fullName>
        <label>Current Product Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Events__c</fullName>
        <label>Customer Events</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
                <value>
                    <fullName>Downgrade</fullName>
                </value>
                <value>
                    <fullName>Install</fullName>
                </value>
                <value>
                    <fullName>Shutdown/Restart</fullName>
                </value>
                <value>
                    <fullName>Expand/Scale - Adding VM/Node/Clusters</fullName>
                </value>
                <value>
                    <fullName>Network Change</fullName>
                </value>
                <value>
                    <fullName>Infrastructure Change</fullName>
                </value>
                <value>
                    <fullName>Maintenance/Housekeeping</fullName>
                </value>
                <value>
                    <fullName>IaaS Migration</fullName>
                </value>
                <value>
                    <fullName>Major Customer Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customers_Planned_Procedure__c</fullName>
        <inlineHelpText>Eg Runbook/Timeline Doc if available</inlineHelpText>
        <label>Customer's Planned Procedure</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DueDateMonth__c</fullName>
        <formula>Month(ActivityDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DueDateMonth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DueDateYear__c</fullName>
        <formula>YEAR(ActivityDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DueDateYear</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_in_Hours__c</fullName>
        <label>Duration in Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EBC_Location__c</fullName>
        <inlineHelpText>For Executive Briefing activities, location being held.</inlineHelpText>
        <label>EBC Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>San Francisco</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>London</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FE_Activity_Hours__c</fullName>
        <label>FE Activity Hours</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_ID_EMC__c</fullName>
        <label>Legacy ID EMC</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ID_SPRING__c</fullName>
        <label>Legacy ID SPRING</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_ID_VMWARE__c</fullName>
        <label>Legacy ID VMWARE</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_ID_XtremeLab__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID XtremeLab</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_Info_ExtremeLab__c</fullName>
        <label>Legacy Info ExtremeLab</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Local_Time__c</fullName>
        <description>Time of the event in the customer's time zone</description>
        <inlineHelpText>Add the time of the event in the customer's time zone</inlineHelpText>
        <label>Local Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Log_Date__c</fullName>
        <description>Date to log FE Activity Hours against</description>
        <label>Log Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Product_Version__c</fullName>
        <inlineHelpText>Enter the product version the customer will be upgrading to if applicable</inlineHelpText>
        <label>New Product Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OldOwner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outreach_Task_Type__c</fullName>
        <label>Outreach Task Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce Linkedin View Profile</fullName>
                </value>
                <value>
                    <fullName>Linkedin Connection Request</fullName>
                </value>
                <value>
                    <fullName>Linkedin Send Message</fullName>
                </value>
                <value>
                    <fullName>Linkedin Interact with Post</fullName>
                </value>
                <value>
                    <fullName>Linkedin Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Slack_Channel_Name_if_applicable__c</fullName>
        <label>Slack Channel Name (if applicable)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specified_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Specified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Task_Remains_with_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task Remains with Case</label>
        <type>Checkbox</type>
    </fields>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team's Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today's Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
</CustomObject>